2002-03-04 Daniel Horn <hellcatv@hotmail.com>
	* Added text over viewscreen
	* Added glow to stars....
	* Made glow work at infinite distance instaed of twinking out
	* Added default Jump, Planet and Sun HudImages
	* Added Hud images for about 98% of objects (tons fo work)
	* Added high_quality_sprite mode (for antialiasing them)
	* Fixed Weapons info with sprite
	* Fixed some ships being upside down (noticed when taking screenshot)
	* Added text for weapon info
	* Added docking bays to be drawn when you press SHIFT-C and have clearence
	* Added manifest VDU screen
	* Fixed known problems with upgrades and tradings
	* Added credits into the picture (get saved as starsystem^credits
	* When you respawn you get loaded into a saved unit.
	* Saved units (with upgrades) are loaded if a mission has a saved game
	* Fixed many font issues
	* Fixed calculation in navigation.cpp to calculate proper velocity with fixed time intervals of SIMULATION_ATOM instead of continuous time
	* Added "Import" option in units...now you can import whole categories at different price from the master part list
	
2002-03-01 Corey O'Connor <oconnorc@dogheadbone.com>
        * Additions and fixes to make a double clickable app.
          - The big problem was the os x glut was setting the working dir to Resources in the bundle. Ack.
          
2002-03-01 Corey O'Connor <oconnorc@dogheadbone.com>
        * Initial commit of mac os x support. 
          - Lot's of small changes. Mostly to header files and such.
          - Need to upload some build instructions as the configure files if it's mac os x expect some things to be in
            certain places. This will most likely be fine for most people but it needs some flexability.

2002-02-28 Daniel Horn <hellcatv@hotmail.com>
	* Added Terrain support for rendered meshes...this was a hell of a lot of work