@@ -1,0 +1,46 @@
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+<head>
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+   <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.17-iforce i686) [Netscape]">
+   <title>Vegastrike - Player Tutorial - Force Feedback Support</title>
+</head>
+<body text="#000000" bgcolor="#CCCCCC" link="#00BB00" vlink="#008040" alink="#00FF00" STYLE="margin-top: 0px; margin-left: 0px;" marginheight="0" marginwidth="0">
+
+<h1>
+<a href="http://sourceforge.net"><img SRC="http://sourceforge.net/sflogo.php?group_id=19507" ALT="SourceForge Logo" NOSAVE BORDER=0 height=31 width=88></a>&nbsp;&nbsp;
+Vegastrike Player Tutorial&nbsp;&nbsp; - Force Feedback Support&nbsp; <font size=+0><a href="index.html">to
+Index</a></font></h1>
+
+<hr WIDTH="100%">
+<p>Force Feedback support for Vegastrike is currently being developed for
+Linux.
+<p>It is my task to write/help write a high-level force-feedback library,
+based on the <a href="http://www.docs.uu.se/~johannd/projects/ff/">kernel
+low-level drivers</a> by Johann Deneux.
+<p>Force Feedback for Linux only works with I-Force2.0 compliant devices,
+see the <a href="http://www.docs.uu.se/~johannd/projects/ff/">Linux and
+I-Force</a> page.
+<p>Current status of development:
+<ul>
+<li>
+force feedback works for me on linux<br>
+using kernel 2.4.17, Johann's latest patch, the joystick connected via
+RS232<br>
+Johann's testing programs work</li>
+</ul>
+
+<p><br>Many *thanks* to <a href="http://www.avbusa.com/">AVB</a> for providing
+open source software developers with free samples of their force-feedback
+devices, to support them in writing drivers/libraries etc.
+<p>Especially thanks to June Yu from <a href="http://www.avbusa.com/">AVB</a>
+and to Johann Deneux.
+<br>&nbsp;
+<p>
+<hr WIDTH="100%">
+<p>please send feedback to <a href="mailto:vegastrike-users@lists.sourceforge.net">vegastrike-users@lists.sourceforge.net</a>
+and tell us what you think :-)
+<p>this page maintained by: Alexander Rawass &lt;<a href="mailto:alexannika@users.sourceforge.net">alexannika@users.sourceforge.net</a>
+<br>&nbsp;
+</body>
+</html>
