@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.2 i686) [Netscape]">
+   <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.4.12 i686) [Netscape]">
    <title>Vegastrike - Player Tutorial</title>
 </head>
 <body text="#000000" bgcolor="#CCCCCC" link="#00BB00" vlink="#008040" alink="#00FF00" background="../../../data/textures/backgrounds/purple_sphere.bmp" nosave STYLE="margin-top: 0px; margin-left: 0px;" marginheight="0" marginwidth="0">
@@ -75,6 +75,9 @@ The <a href="mission_selector.html">Mission Selector</a></li>
 
 <li>
 Playable Missions</li>
+
+<li>
+<a href="force_feedback.html">Force Feedback Support</a> (on Linux)</li>
 </ul>
 
 <p><br>
