@@ -20,7 +20,7 @@
  */
 
 /*
-  xml Configuration written by Alexander Rawass <alexannika@users.sourceforge.net>
+  who wrote this? probably DanielH?
 */
 
 #include <expat.h>
@@ -127,7 +127,8 @@ void Galaxy::doSection(configNode *node, enum section_t section_type){
 
 void Galaxy::checkSection(configNode *node, enum section_t section_type){
     if(node->Name()!="section"){
-      cout << "not a section" << endl;
+      cout << "galaxy_xml: not a section" << endl;
+      node->printNode(cout,0,1);
     return;
   }
 
